--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             }
         }
 
-        function sendMessage() {
+        async function sendMessage() {
             const userInput = document.getElementById('user-input');
             const messageText = userInput.value;
             if (!messageText.trim()) return;
@@ -179,37 +179,40 @@
                 return;
             }
 
-            const endpoint = `${baseEndpoint}${apiKey}`;
-            fetchChatbotResponse(messageText, endpoint);
-        }
-
-        function fetchChatbotResponse(message, endpoint) {
-            fetch(endpoint, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    prompt: message,
-                    maxOutputTokens: 50  // 適切なトークン数に調整してください
-                })
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTPエラー: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(data => {
-                const botMessage = { sender: 'bot', text: data.generatedText || 'No response' };
+            const response = await sendRequest(apiKey, messageText);
+            if (response.error) {
+                alert(response.error);
+            } else {
+                const botMessage = { sender: 'bot', text: response.generatedText || 'No response' };
                 chatRooms[currentRoom].push(botMessage);
                 displayMessage(botMessage);
                 saveChatRooms();
-            })
-            .catch(error => {
-                console.error('Error fetching response:', error);
-                alert('AIの応答を取得できませんでした。APIキーを確認してください。');
-            });
+            }
+        }
+
+        async function sendRequest(apiKey, prompt) {
+            try {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${apiKey}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ prompt })
+                });
+
+                if (!response.ok) {
+                    return { error: `ネットワーク応答が正常ではありません: ${response.status}` };
+                }
+
+                const data = await response.json();
+                if (data.error) {
+                    return { error: `APIエラー: ${data.error.message}` };
+                }
+
+                return data.response || { error: '応答がありません' };
+            } catch (error) {
+                return { error: `フェッチエラー: ${error.message}` };
+            }
         }
 
         function resetChat() {
