--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
 
         async function sendRequest(apiKey, prompt) {
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${apiKey}`, {
+                const response = await fetch(`${baseEndpoint}${apiKey}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ prompt })
+                    body: JSON.stringify({ prompt: { text: prompt } }) // リクエストボディの修正
                 });
 
                 if (!response.ok) {
@@ -216,12 +216,19 @@
                 }
 
                 const data = await response.json();
+                console.log('API response:', data); // ログ追加
+
                 if (data.error) {
                     return { error: `APIエラー: ${data.error.message}` };
                 }
 
-                return data.response || { error: '応答がありません' };
+                if (data.response) {
+                    return data.response;
+                } else {
+                    return { error: '応答がありません' };
+                }
             } catch (error) {
+                console.error('フェッチエラー:', error); // ログ追加
                 return { error: `フェッチエラー: ${error.message}` };
             }
         }
