--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ prompt: { text: prompt } })  // リクエストボディの修正
+                    body: JSON.stringify({ prompt: { text: prompt } })  // リクエストボディ
                 });
 
                 if (!response.ok) {
