--- a/index.html
+++ b/index.html
@@ -74,18 +74,15 @@
     <div class="chat-container">
         <div class="chat-header">
             <h2>Gemini Chatbot</h2>
-            <!-- 言語選択 -->
             <select id="language-select">
                 <option value="en">English</option>
                 <option value="ja">日本語</option>
             </select>
         </div>
         <div class="settings">
-            <!-- APIキーの入力 -->
             <input type="text" id="api-key" placeholder="APIキーを入力してください" style="width: calc(100% - 20px);">
         </div>
         <div class="chat-rooms">
-            <!-- ルームの追加・削除ボタン -->
             <button onclick="addRoom()">+ ルーム追加</button>
             <button onclick="deleteRoom()">- ルーム削除</button>
             <div id="rooms-container"></div>
@@ -94,75 +91,98 @@
             <!-- メッセージがここに表示される -->
         </div>
         <div class="controls">
-            <!-- メッセージの入力と操作ボタン -->
             <input type="text" id="user-input" class="input-area" placeholder="メッセージを入力...">
             <button onclick="sendMessage()">送信</button>
             <button onclick="resetChat()">リセット</button>
         </div>
     </div>
 
-    <!-- Mathレンダリング用プラグイン -->
     <script src="plugin/math.js"></script>
-    <!-- DOMPurifyを使用してXSS攻撃を防止 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.4/purify.min.js"></script>
     <script>
-        // 基本のエンドポイントURL
         const baseEndpoint = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=';
         let currentRoom = 'default';  // 現在のルーム
         let chatRooms = JSON.parse(localStorage.getItem('chatRooms')) || { 'default': [] };  // 保存されたチャットルーム
         let language = 'ja';  // デフォルト言語
 
-        // 新しいルームを追加
-        function addRoom() {
-            const roomName = prompt(getString('newRoomPrompt'));
-            if (roomName && !chatRooms[roomName]) {
-                chatRooms[roomName] = [];
+        async function sendMessage() {
+            const userInput = document.getElementById('user-input');
+            const messageText = userInput.value.trim();
+            if (!messageText) return;
+
+            const message = { sender: 'user', text: DOMPurify.sanitize(messageText) };  // ユーザーメッセージのサニタイズ
+            chatRooms[currentRoom].push(message);
+            displayMessage(message);
+            userInput.value = '';
+
+            const apiKey = document.getElementById('api-key').value;
+            if (!apiKey) {
+                alert(getString('apiKeyAlert'));
+                return;
+            }
+
+            const response = await sendRequest(apiKey, messageText);
+            
+            // APIリクエストの結果を確認
+            if (response.error) {
+                alert(response.error);
+            } else {
+                const botMessageText = response.generatedText || getString('noResponse');
+                const botMessage = { sender: 'bot', text: DOMPurify.sanitize(botMessageText) };
+                chatRooms[currentRoom].push(botMessage);
+                displayMessage(botMessage);
                 saveChatRooms();
-                updateRooms();
             }
         }
 
-        // ルームを削除
-        function deleteRoom() {
-            const roomName = prompt(getString('deleteRoomPrompt'));
-            if (roomName && chatRooms[roomName] && roomName !== 'default') {
-                delete chatRooms[roomName];
-                saveChatRooms();
-                updateRooms();
-                if (currentRoom === roomName) {
-                    changeRoom('default');
+        async function sendRequest(apiKey, prompt) {
+            try {
+                const response = await fetch(`${baseEndpoint}${apiKey}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        prompt: { text: prompt },
+                        candidateCount: 1  // 応答の数を指定
+                    })  
+                });
+
+                if (!response.ok) {
+                    return { error: getString('networkError', response.status) };
                 }
-            } else if (roomName === 'default') {
-                alert(getString('defaultRoomAlert'));
+
+                const data = await response.json();
+                if (data.error) {
+                    return { error: getString('apiError', data.error.message) };
+                }
+
+                // 正しいレスポンス形式を確認
+                if (data.candidates && data.candidates.length > 0) {
+                    return { generatedText: data.candidates[0].output || getString('noResponse') };
+                } else {
+                    return { error: getString('noResponse') };
+                }
+            } catch (error) {
+                return { error: getString('requestError', error.message) };
             }
         }
 
-        // ルーム一覧を更新
-        function updateRooms() {
-            const roomsContainer = document.getElementById('rooms-container');
-            roomsContainer.innerHTML = '';
-            Object.keys(chatRooms).forEach(room => {
-                const roomButton = document.createElement('button');
-                roomButton.textContent = room;
-                roomButton.onclick = () => changeRoom(room);
-                roomsContainer.appendChild(roomButton);
-            });
+        function getString(key, param) {
+            const strings = {
+                apiKeyAlert: { en: 'Please enter the API key.', ja: 'APIキーを入力してください。' },
+                noResponse: { en: 'No response from AI.', ja: 'AIからの応答がありません。' },
+                networkError: { en: `Network error: ${param}`, ja: `ネットワークエラー: ${param}` },
+                apiError: { en: `API error: ${param}`, ja: `APIエラー: ${param}` },
+                requestError: { en: `Request error: ${param}`, ja: `リクエストエラー: ${param}` }
+            };
+            return strings[key][language] || '';
         }
 
-        // ルームを変更
-        function changeRoom(room) {
-            currentRoom = room;
-            document.getElementById('messages').innerHTML = '';
-            chatRooms[room].forEach(message => displayMessage(message));
-        }
-
-        // メッセージを表示
         function displayMessage(message) {
             const messageDiv = document.createElement('div');
             messageDiv.className = message.sender === 'user' ? 'message user-message' : 'message bot-message';
-            // メッセージを安全に表示
-            messageDiv.innerHTML = DOMPurify.sanitize(message.text);
+            messageDiv.innerHTML = message.text;
             messageDiv.onclick = () => editMessage(message);
             document.getElementById('messages').appendChild(messageDiv);
 
@@ -177,12 +197,11 @@
             });
         }
 
-        // メッセージを編集
         function editMessage(message) {
             if (message.sender === 'user') {
-                const newMessageText = prompt(getString('editMessagePrompt'), message.text);
+                const newMessageText = prompt('メッセージを編集してください:', message.text);
                 if (newMessageText !== null) {
-                    message.text = DOMPurify.sanitize(newMessageText);  // メッセージを安全に変更
+                    message.text = newMessageText;
                     chatRooms[currentRoom] = chatRooms[currentRoom].map(msg => msg === message ? message : msg);
                     saveChatRooms();
                     document.getElementById('messages').innerHTML = '';
@@ -191,144 +210,64 @@
             }
         }
 
-        // メッセージを送信
-        async function sendMessage() {
-            const userInput = document.getElementById('user-input');
-            const messageText = userInput.value;
-            if (!messageText.trim()) return;
-
-            const message = { sender: 'user', text: DOMPurify.sanitize(messageText) };  // ユーザーメッセージのサニタイズ
-            chatRooms[currentRoom].push(message);
-            displayMessage(message);
-            userInput.value = '';
-
-            const apiKey = document.getElementById('api-key').value;
-            if (!apiKey) {
-                alert(getString('apiKeyAlert'));
-                return;
-            }
-
-            const response = await sendRequest(apiKey, messageText);
-            if (response.error) {
-                alert(response.error);
-            } else {
-                const botMessage = { sender: 'bot', text: DOMPurify.sanitize(response.generatedText || getString('noResponse')) };
-                chatRooms[currentRoom].push(botMessage);
-                displayMessage(botMessage);
-                saveChatRooms();
-            }
-        }
-
-        // APIリクエストを送信
-        async function sendRequest(apiKey, prompt) {
-            try {
-                const response = await fetch(`${baseEndpoint}${apiKey}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ prompt: { text: prompt } })  // リクエストボディ
-                });
-
-                if (!response.ok) {
-                    return { error: getString('networkError', response.status) };
-                }
-
-                const data = await response.json();
-                if (data.error) {
-                    return { error: getString('apiError', data.error.message) };
-                }
-
-                if (data.response) {
-                    return data.response;
-                } else {
-                    return { error: getString('noResponse') };
-                }
-            } catch (error) {
-                return { error: getString('requestError', error.message) };
-            }
-        }
-
-        // チャットの保存
-        function saveChatRooms() {
-            localStorage.setItem('chatRooms', JSON.stringify(chatRooms));
-        }
-
-        // チャットをリセット
-        function resetChat() {
-            if (confirm(getString('resetChatConfirm'))) {
-                chatRooms = { 'default': [] };
-                currentRoom = 'default';
+        function addRoom() {
+            const roomName = prompt('新しいルーム名を入力してください:');
+            if (roomName && !chatRooms[roomName]) {
+                chatRooms[roomName] = [];
                 saveChatRooms();
                 updateRooms();
+            }
+        }
+
+        function deleteRoom() {
+            const roomName = prompt('削除するルーム名を入力してください:');
+            if (roomName && chatRooms[roomName] && roomName !== 'default') {
+                delete chatRooms[roomName];
+                saveChatRooms();
+                updateRooms();
+                if (currentRoom === roomName) {
+                    changeRoom('default');
+                }
+            } else if (roomName === 'default') {
+                alert('デフォルトのルームは削除できません。');
+            }
+        }
+
+        function updateRooms() {
+            const roomsContainer = document.getElementById('rooms-container');
+            roomsContainer.innerHTML = '';
+            Object.keys(chatRooms).forEach(room => {
+                const roomButton = document.createElement('button');
+                roomButton.textContent = room;
+                roomButton.onclick = () => changeRoom(room);
+                roomsContainer.appendChild(roomButton);
+            });
+        }
+
+        function changeRoom(room) {
+            currentRoom = room;
+            document.getElementById('messages').innerHTML = '';
+            chatRooms[currentRoom].forEach(message => displayMessage(message));
+        }
+
+        function resetChat() {
+            if (confirm(getString('resetConfirm'))) {
+                chatRooms[currentRoom] = [];
+                saveChatRooms();
                 document.getElementById('messages').innerHTML = '';
             }
         }
 
-        // 言語に応じて文字列を取得
-        function getString(key, ...params) {
-            const strings = {
-                en: {
-                    newRoomPrompt: 'Enter new room name:',
-                    deleteRoomPrompt: 'Enter room name to delete:',
-                    defaultRoomAlert: 'Default room cannot be deleted.',
-                    editMessagePrompt: 'Edit your message:',
-                    apiKeyAlert: 'Please enter your API key.',
-                    noResponse: 'No response from API.',
-                    networkError: 'Network response was not ok: {0}',
-                    apiError: 'API error: {0}',
-                    requestError: 'Request error: {0}',
-                    resetChatConfirm: 'Are you sure you want to reset the chat? This cannot be undone.',
-                    chatbotTitle: 'Gemini Chatbot',
-                    messagePlaceholder: 'Enter your message...',
-                    sendButton: 'Send',
-                    resetButton: 'Reset'
-                },
-                ja: {
-                    newRoomPrompt: '新しいルーム名を入力してください:',
-                    deleteRoomPrompt: '削除するルーム名を入力してください:',
-                    defaultRoomAlert: 'デフォルトのルームは削除できません。',
-                    editMessagePrompt: 'メッセージを編集してください:',
-                    apiKeyAlert: 'APIキーを入力してください。',
-                    noResponse: 'APIからの応答がありません。',
-                    networkError: 'ネットワーク応答が正常ではありません: {0}',
-                    apiError: 'APIエラー: {0}',
-                    requestError: 'リクエストエラー: {0}',
-                    resetChatConfirm: '本当にチャットをリセットしますか？この操作は元に戻せません。',
-                    chatbotTitle: 'ジェミニチャットボット',
-                    messagePlaceholder: 'メッセージを入力...',
-                    sendButton: '送信',
-                    resetButton: 'リセット'
-                }
-            };
-            const langStrings = strings[language];
-            let str = langStrings[key] || key;
-            params.forEach((param, index) => {
-                str = str.replace(`{${index}}`, param);
-            });
-            return str;
+        function saveChatRooms() {
+            localStorage.setItem('chatRooms', JSON.stringify(chatRooms));
         }
 
-        // 言語変更時の処理
-        document.getElementById('language-select').addEventListener('change', (event) => {
-            language = event.target.value;
-            updateUI();
+        document.getElementById('language-select').addEventListener('change', function () {
+            language = this.value;
         });
 
-        // UIの更新
-        function updateUI() {
-            document.querySelector('h2').textContent = getString('chatbotTitle');
-            document.getElementById('user-input').placeholder = getString('messagePlaceholder');
-            document.querySelector('button[onclick="sendMessage()"]').textContent = getString('sendButton');
-            document.querySelector('button[onclick="resetChat()"]').textContent = getString('resetButton');
-            updateRooms();
-        }
-
-        // 初期化処理
-        window.onload = () => {
-            updateUI();  // UIの初期化
-            changeRoom('default');  // デフォルトルームの選択
-        };
+        updateRooms(); // 初期化
+        changeRoom(currentRoom); // デフォルトルームに変更
     </script>
 </body>
 </html>
